--- a/src/main/webapp/resources/css/jsfcrud.css
+++ b/src/main/webapp/resources/css/jsfcrud.css
@@ -22,7 +22,7 @@
     padding: 0%;
     margin: 0%;
     background-color: rgb(0,5,11);
-    background-image: url("#{resource['images/bg1.jpg']}");
+    background-image: url("#{resource['images/5-slider.jpg']}");
     background-position: center ;
     background-repeat: no-repeat;
     background-size: cover;
